# rust_diesel_basics

./: .env  Cargo.toml
src/: lib.rs  schema.rs
