[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["Dylan Thunn <49996239+dthunn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel = { version = "1.4.0", features = ["postgres"] }